[package]
name = "sam-loc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
futures-channel = "0.3.32"
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
jsonwebtoken = "10.3.0"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1.5.0", features = ["full"] }
tokio-tungstenite = {version = "0.29.0", features = ["native-tls"]}

